Sign up form design

--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -26,5 +26,8 @@ code {
   .But{
     @apply relative mt-6 border rounded-md py-2 text-sm text-beige bg-dark/80 hover:bg-dark;
   }
+  .Input{
+    @apply text-sm sm:text-base placeholder-gray-500 pl-10 pr-4 rounded-lg border border-gray-400 w-full py-2 focus:outline-none focus:border-blue-400;
+  }
 
 }
