--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -9,25 +9,64 @@ code {
 
 @layer components{
   .ChatPage {
-    @apply flex h-screen antialiased text-gray-800;
+    @apply flex h-screen antialiased text-gray-800 m-0;
   }
   .SideBar {
-    @apply flex flex-col py-8 pl-6 pr-6 w-64 bg-dark    flex-shrink-0;
+    @apply flex flex-col py-8 pl-1 pr-1 bg-dark flex-shrink-0;
   }
   .Conversation{
-    @apply flex flex-col flex-auto h-full p-6 bg-light;
+    @apply flex flex-col flex-auto h-full overflow-y-hidden bg-light;
   }
   .ChatInput{
-    @apply flex items-center h-16 w-full px-4 bg-light;
+    @apply flex items-center w-full px-4 bg-light;
   }
   .LoginForm{
     @apply min-h-screen flex flex-col items-center justify-center bg-medium;
   }
   .But{
-    @apply relative mt-6 border rounded-md py-2 text-sm text-beige bg-dark/80 hover:bg-dark;
+    @apply relative mt-6 border rounded-md py-2 text-sm text-white bg-dark hover:bg-dark;
   }
   .Input{
     @apply text-sm sm:text-base placeholder-gray-500 pl-10 pr-4 rounded-lg border border-gray-400 w-full py-2 focus:outline-none focus:border-blue-400;
   }
+  .Welcome h1{
+    overflow: hidden; /* Ensures the content is not revealed until the animation */
+    border-right: .15em solid orange; /* The typwriter cursor */
+    white-space: nowrap; /* Keeps the content on a single line */
+    margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+    letter-spacing: .15em; /* Adjust as needed */
+    animation: 
+      typing 3.5s steps(40, end),
+      blink-caret .75s step-end infinite;
+  }
+  @keyframes typing {
+    from { width: 0 }
+    to { width: 100% }
+  }
+  @keyframes blink-caret {
+    from, to { border-color: transparent }
+    50% { border-color: orange; }
+  }
+  /* CSS */
+::-webkit-scrollbar {
+  width: 0.5rem;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #F8E8EE;
+  border-radius: 12px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #F2BED1;
+  border-radius: 12px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #F2BED1;
+}
 
 }
